[package]
name = "http-utils"
version = "0.3.0"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Version necessary for compatibility with actix-web 2
actix-multipart = "0.3.0"
actix-rt = "2.1.0"
actix-service = "1.0.6"
futures = "0.3.12"
async-std = "1.9.0"
sanitize-filename = "0.3"
anyhow = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
uuid = { version = "0.8.2", features = ["v4"] }
path-utils = { version = "0.3.0", git = "https://github.com/pablodeymo/path-utils" }

# Optional for fordwarding request
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"], optional = true }
actix-web = { version="3.3.2", features=["rust-tls"], optional = true  }

[features]
enablereqwest = ["reqwest", "actix-web"]